fwknop-2.6.4 (09//2014):
    - (Gerry Reno) Added support for firewalld to the fwknopd daemon on RHEL 7
      CentOS 7. This is implemented using the current firewalld '--direct
      --passthrough' capability which accepts raw iptables commands. More
      information on firewalld can be found here:

      https://fedoraproject.org/wiki/FirewallD

    - (Bill Stubbs) submitted a patch to fix a bug where fwknopd could not
      handle Ethernet frames that include the Frame Check Sequence (FCS)
      header. This header is four bytes long, and is placed at the end of each
      Ethernet frame. Normally the FCS header is not visible to libpcap, but
      some card/driver combinations result in it being included. Bill noticed
      this on the following platform:

          BeagleBone Black rev C running 3.8.13-bone50 #1 SMP Tue May 13
          13:24:52 UTC 2014 armv7l GNU/Linux

fwknop-2.6.3 (07/28/2014):
    - [client] External IP resolution via '-R' (or '--resolve-ip-http') is now
      done via SSL by default. The IP resolution URL is now
      'https://www.cipherdyne.org/cgi-gin/myip', and a warning is generated
      in '-R' mode whenever a non-HTTPS URL is specified (it is safer just to
      use the default). The fwknop client leverages 'wget' for this operation
      since that is cleaner than having fwknop link against an SSL library.
    - Integrated the 'libfiu' fault injection library available from
      http://blitiri.com.ar/p/libfiu/  This feature is disabled by default,
      and requires the --enable-libfiu-support argument to the 'configure'
      script in order to enable it. With fwknop compiled against libfiu, fault
      injections are done at various locations within the fwknop sources and
      the test suite verifies that the faults are properly handled at run time
      via test/fko-wrapper/fko_fault_injection.c. In addition, the libfiu tool
      'fiu-run' is used against the fwknop binaries to ensure they handle